--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta name="google-site-verification" content="va2zblKfsY2OHkwRCtC3i5KToq-eaymVx8ZPkkegOI0" />
     <!-- SEO Meta Tags -->
     <meta name="description" content="오늘 다 뱉음, 내일은 가벼움. 24시간 뒤 사라지는 익명 감정 공유" />
     <meta name="keywords" content="익명, 감정공유, 고민상담, 익명게시판, 24시간, 마인드포스팃" />
