네이버 서치어드바이저 인증 태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
   <head>
     <meta name="google-site-verification" content="va2zblKfsY2OHkwRCtC3i5KToq-eaymVx8ZPkkegOI0" />
+    <meta name="naver-site-verification" content="9c8b500923c854a1115b8612406b838544fa517" />
     <!-- SEO Meta Tags -->
     <meta name="description" content="오늘 다 뱉음, 내일은 가벼움. 24시간 뒤 사라지는 익명 감정 공유" />
     <meta name="keywords" content="익명, 감정공유, 고민상담, 익명게시판, 24시간, 마인드포스팃" />
